src/tests/snapshots/protocols__core__serialize__tests__invalid_step_arg.snap
---
source: src/core/serialize.rs
expression: content
---
error: Step call expected single positive integer as argument, got 0.
  ┌─ tests/misc/invalid_step_arg.prot:8:3
  │
8 │   step(0);
  │   ^^^^^^^^ Step call expected single positive integer as argument, got 0.
